Small updates across files

--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -188,3 +188,9 @@ a.link-text {
     justify-content: center;
     align-items: center;
 }
+
+a.no-link-style {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+}
