Many changes for ST4 caster scene

--- a/website/src/assets/app.css
+++ b/website/src/assets/app.css
@@ -207,3 +207,6 @@ body.overlay {
     background: transparent;
     background-color: transparent;
 }
+.industry-align {
+    transform: translate(0, -0.0925em);
+}
