--- a/website/src/assets/app.css
+++ b/website/src/assets/app.css
@@ -209,7 +209,7 @@ body.overlay {
     background-color: transparent;
 }
 .industry-align {
-    transform: translate(0, -0.09em);
+    transform: var(--overlay-line-height-adjust, translate(0, -0.0925em));
 }
 
 h1.big {
