--- a/website/src/assets/app.css
+++ b/website/src/assets/app.css
@@ -263,3 +263,14 @@ a.ct-passive:hover,
 .modal-content {
     color: #222;
 }
+
+/* hide arrows on input[type=number] https://stackoverflow.com/a/4298216 */
+
+input.no-arrows::-webkit-outer-spin-button,
+input.no-arrows::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input.no-arrows[type=number] {
+    -moz-appearance:textfield;
+}
