Big batch of changes

--- a/website/src/assets/app.css
+++ b/website/src/assets/app.css
@@ -293,3 +293,13 @@ input.no-arrows[type=number] {
 .gap-4 {
     gap: 1.5rem;
 }
+
+.opacity-changes {
+    opacity: 1;
+    transition: opacity .3s ease;
+}
+.low-opacity {
+    opacity: 0.5;
+    pointer-events: none;
+    cursor: wait;
+}
