--- a/website/src/assets/app.css
+++ b/website/src/assets/app.css
@@ -1,6 +1,10 @@
 
 /* Overwriting bootstrap defaults */
 
+a {
+    text-decoration: none;
+}
+
 :root {
     --blue: #007bff;
     --indigo: #6610f2;
@@ -92,23 +96,6 @@ a:not(.link-text), a:not(.link-text):hover {
 /*    border-color: #009357 !important;*/
 /*}*/
 
-#slmn-attribution img {
-    height: 40px;
-}
-
-#slmn-attribution {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    padding: 20px;
-    opacity: 0.5;
-    transition: opacity 200ms ease;
-}
-
-#slmn-attribution:hover {
-    opacity: 1;
-}
-
 #slmngg-app {
     padding-bottom: 32px;
 }
@@ -124,7 +111,7 @@ img.navbar-image {
     margin-left: -6px;
 }
 
-nav.navbar-dark {
+nav[type="dark"] {
     background-color: rgba(0,0,0,0.5);
 }
 
@@ -165,15 +152,6 @@ a.link-text {
 }
 
 
-#spoiler-app .switch {
-    cursor: pointer;
-}
-
-#spoiler-app .switch:hover {
-    color: rgba(255,255,255,1);
-}
-
-
 .f-col { display: flex; flex-direction: column; }
 .f-row { display: flex; flex-direction: row; }
 
@@ -190,6 +168,10 @@ a.nav-link.no-link-style, a.nav-link.no-link-style:hover {
     display: block;
     text-decoration: none;
     color: inherit;
+}
+
+.nav-link {
+    --bs-navbar-active-color: #fff;
 }
 
 
@@ -281,6 +263,11 @@ input.no-arrows[type=number] {
     border-top: none;
 }
 
+.table-dark {
+    /*border-color: #3c3e3f;*/
+    --bs-table-bg: #343a40;
+}
+
 .gap-1 {
     gap: .25rem;
 }
@@ -292,4 +279,66 @@ input.no-arrows[type=number] {
 }
 .gap-4 {
     gap: 1.5rem;
+}
+
+.mr-0 {
+    margin-right: 0 !important;
+}
+
+.mr-1 {
+    margin-right: 0.25rem !important;
+}
+
+.mr-2 {
+    margin-right: 0.5rem !important;
+}
+
+.mr-3 {
+    margin-right: 1rem !important;
+}
+
+.mr-4 {
+    margin-right: 1.5rem !important;
+}
+
+.mr-5 {
+    margin-right: 3rem !important;
+}
+
+.mr-auto {
+    margin-right: auto !important;
+}
+
+.ml-0 {
+    margin-left: 0 !important;
+}
+
+.ml-1 {
+    margin-left: 0.25rem !important;
+}
+
+.ml-2 {
+    margin-left: 0.5rem !important;
+}
+
+.ml-3 {
+    margin-left: 1rem !important;
+}
+
+.ml-4 {
+    margin-left: 1.5rem !important;
+}
+
+.ml-5 {
+    margin-left: 3rem !important;
+}
+
+.ml-auto {
+    margin-left: auto !important;
+}
+.text-left {
+    text-align: left !important;
+}
+.text-right {
+    text-align: right !important;
 }
