Update broadcast roles to set cameras for observers

--- a/website/src/assets/app.css
+++ b/website/src/assets/app.css
@@ -191,6 +191,7 @@ body.overlay {
 }
 .industry-align {
     transform: var(--overlay-line-height-adjust, translate(0, -0.0925em));
+    --translate-y: -0.0925em;
 }
 
 h1.big {
