Add Alternative VOD to matches

--- a/website/src/assets/app.css
+++ b/website/src/assets/app.css
@@ -352,3 +352,6 @@ input.no-arrows[type=number] {
 .text-muted {
     color: #6c757d !important;
 }
+small.text-body-secondary {
+    color: white !important;
+}
