--- a/website/src/assets/app.css
+++ b/website/src/assets/app.css
@@ -85,6 +85,7 @@ a:not(.link-text), a:not(.link-text):hover {
 }
 .dropdown-item.active, .dropdown-item:active {
     background-color: var(--blue);
+    color: white !important;
 }
 .dropdown-item {
     text-transform: uppercase;
