--- a/website/src/assets/app.css
+++ b/website/src/assets/app.css
@@ -366,3 +366,7 @@ small.text-body-secondary {
     pointer-events: none;
     cursor: wait;
 }
+
+.dark-border {
+    border: 1px solid #454d55;
+}
