--- a/website/src/assets/app.css
+++ b/website/src/assets/app.css
@@ -370,3 +370,10 @@ small.text-body-secondary {
 .dark-border {
     border: 1px solid #454d55;
 }
+
+@media (min-width: 768px) {
+    .w-md-25 { width: 25% !important; }
+    .w-md-50 { width: 50% !important; }
+    .w-md-75 { width: 75% !important; }
+    .w-md-100 { width: 100% !important; }
+}
