--- a/website/src/assets/app.css
+++ b/website/src/assets/app.css
@@ -373,7 +373,9 @@ small.text-body-secondary {
 
 @media (min-width: 768px) {
     .w-md-25 { width: 25% !important; }
+    .w-md-33 { width: 33% !important; }
     .w-md-50 { width: 50% !important; }
+    .w-md-67 { width: 67% !important; }
     .w-md-75 { width: 75% !important; }
     .w-md-100 { width: 100% !important; }
 }
