--- a/website/src/assets/app.css
+++ b/website/src/assets/app.css
@@ -201,6 +201,7 @@ h1.big {
 
 .default-thing {
     background-color: rgba(255, 255, 255, 0.1);
+    background-color: #373737;
     border-color: rgba(255, 255, 255, 0.2);
     color: rgb(255, 255, 255);
     transition: background-color .2s, border-color .2s, color .2s;
