Not perfect but sure as hell is something

--- a/website/src/views/sub-views/match-editors.css
+++ b/website/src/views/sub-views/match-editors.css
@@ -26,7 +26,8 @@
     flex-direction: column;
     gap: 1em;
 }
-.action-footer-buttons {
+.action-footer-buttons,
+.action-footer-right {
     align-items: flex-end;
 }
 .action-title {
