--- a/website/src/assets/app.css
+++ b/website/src/assets/app.css
@@ -201,6 +201,7 @@ h1.big {
 
 .default-thing {
     background-color: rgba(255, 255, 255, 0.1);
+    background-color: #373737;
     border-color: rgba(255, 255, 255, 0.2);
     color: rgb(255, 255, 255);
     transition: background-color .2s, border-color .2s, color .2s;
@@ -402,4 +403,20 @@ small.text-body-secondary {
 .dark-scrollbar:hover::-webkit-scrollbar-thumb,
 .dark-scrollbar:active::-webkit-scrollbar-thumb {
     background-color: #333;
+}
+
+.guide-image {
+    border-radius: .25em;
+    border: 1px solid rgba(255,255,255,0.1);
+    margin-bottom: .5em;
+    max-width: 100%;
+}
+
+pre.dev {
+    background-color: #222;
+    color: white;
+    top: 0;
+    left: 0;
+    padding: .5em;
+    font-size: 12px;
 }
