Add a draft room to SLMNGG (#298)
* Start working on pickban rooms

* UI work

* Small fixes to start draft. TODO is backend

* Finalize draft room MVP

* Minor layout fixes

* Consolidate draft room code & move to TS

* Front end changes + some new TODOs

* Not perfect but sure as hell is something

* Fix lint fail

---------

Co-authored-by: Solomon Cammack <solomon@solomon.eu.com>

--- a/website/src/assets/app.css
+++ b/website/src/assets/app.css
@@ -411,3 +411,12 @@ small.text-body-secondary {
     margin-bottom: .5em;
     max-width: 100%;
 }
+
+pre.dev {
+    background-color: #222;
+    color: white;
+    top: 0;
+    left: 0;
+    padding: .5em;
+    font-size: 12px;
+}
