--- a/website/src/views/sub-views/match-editors.css
+++ b/website/src/views/sub-views/match-editors.css
@@ -4,6 +4,9 @@
     max-width: 100%;
 }
 
+.editor-holder, .match-editor {
+    width: 100%;
+}
 
 .action-container {
     border: 1px solid rgba(255,255,255,0.1);
