--- a/website/src/assets/app.css
+++ b/website/src/assets/app.css
@@ -424,3 +424,17 @@ pre.dev {
 .text-monospace {
     font-family: var(--font-family-monospace), monospace;
 }
+
+.cut-icon.icon-marvel {
+    min-width: 1.25em;
+    min-height: 1.25em;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    mask-position: center;
+    mask-repeat: no-repeat;
+    mask-size: contain;
+    background-color: currentColor;
+    vertical-align: middle;
+}
